--- a/src/profile_info.html
+++ b/src/profile_info.html
@@ -294,7 +294,7 @@
                                 Họ
                             </div>
                             <div class="body_right-info_child-text">
-                                Đỗ
+                                Mai
                             </div>
                         </div>
                         <div class="body_right-info_child">
@@ -302,7 +302,7 @@
                                 Tên
                             </div>
                             <div class="body_right-info_child-text">
-                                Long
+                                Jang
                             </div>
                         </div>
                         <div class="body_right-info_child">
@@ -310,7 +310,7 @@
                                 Email
                             </div>
                             <div class="body_right-info_child-text">
-                                LongLinh@gmail.com
+                                giangmn@gmail.com
                             </div>
                         </div>
                         <div class="body_right-info_child">
