--- a/src/cart.html
+++ b/src/cart.html
@@ -219,21 +219,21 @@
                                 <img src="../assets/img/MBBANK.jpg" class="img_pay">
                                 <div class="info_pay">
                                     <span>**** **** **** 1235</span> <br>
-                                    <span>Bui Ha Long</span>
+                                    <span>Mai Ngoc Giang</span>
                                 </div>
                             </div>
                             <div class="receiver_information-child">
                                 <img src="../assets/img/Mastercard_2019_logo.svg.png" class="img_pay">
                                 <div class="info_pay">
                                     <span>**** **** **** 1235</span> <br>
-                                    <span>Bui Ha Long</span>
+                                    <span>Mai Ngoc Giang</span>
                                 </div>
                             </div>
                             <div class="receiver_information-child">
                                 <img src="../assets/img/BIDV.jpg" class="img_pay">
                                 <div class="info_pay">
                                     <span>**** **** **** 1235</span> <br>
-                                    <span>Bui Ha Long</span>
+                                    <span>Mai Ngoc Giang</span>
                                 </div>
                             </div>
                         </div>
